# VOIDRP-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260406_0001_initial_account_foundation.py  20260408_0002_add_play_tickets.py  20260410_0003_add_social_profile_referrals.py  20260410_0004_add_nations_foundation.py  20260412_0005_add_nation_stats_mvp.py
apps/api/app/: config.py  db.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: security.py
apps/api/app/dependencies/: admin.py  auth.py  server_auth.py
apps/api/app/models/: __init__.py  base.py  email_token.py  media_asset.py  nation.py  nation_join_request.py  nation_member.py  nation_stat.py  play_ticket.py  player_account.py  player_follow.py  player_public_profile.py  referral_code.py  referral_link.py  referral_reward_period.py  refresh_session.py  user.py
apps/api/app/repositories/: user_repository.py
apps/api/app/schemas/: account.py  admin.py  auth.py  common.py  game_sync.py  nation.py  nation_stats.py  play_ticket.py  profile.py  referral.py  server_auth.py  social.py
apps/api/app/services/: admin_player_service.py  auth_service.py  email_service.py  game_sync_service.py  legacy_auth_service.py  media_service.py  nation_media_service.py  nation_service.py  nation_stats_service.py  play_ticket_service.py  public_profile_service.py  (+3 more)
apps/api/voidrp_account_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: commands.txt  import_legacy_from_uuid_yaml.py  import_legacy_players.py
tests/: test_auth_flow.py
(+13 files in other folders)
